<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="550dp"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tinder"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/popup_movie_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/DefaultMargin"
        android:text="@string/popup_movie_name"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        android:layout_marginRight="@dimen/DefaultMargin"
        />

    <TextView
        android:id="@+id/popup_movie_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_movie_description_title"
        android:layout_marginTop="@dimen/DefaultMargin"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/popup_movie_description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_movie_description_subtitle"
        style="@style/DefaultTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_movie_description_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_movie_description_title" />

    <TextView
        android:id="@+id/popup_movie_description_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_movie_description_time"
        android:layout_marginTop="@dimen/DefaultMargin"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="@+id/popup_movie_description_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/popup_movie_description_subtitle" />

    <TextView
        android:id="@+id/popup_movie_subtitle_time"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_movie_subtitle_time"
        app:layout_constraintStart_toStartOf="@+id/popup_movie_description_time"
        app:layout_constraintTop_toBottomOf="@+id/popup_movie_description_time" />

    <TextView
        android:id="@+id/popup_movie_synopsis_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultMargin"
        android:text="@string/popup_movie_synopsis_title"
        app:layout_constraintStart_toStartOf="@+id/popup_movie_subtitle_time"
        app:layout_constraintTop_toBottomOf="@+id/popup_movie_subtitle_time" />

    <TextView
        android:id="@+id/popup_movie_synopsis_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_movie_synopsis_subtitle"
        app:layout_constraintStart_toStartOf="@+id/popup_movie_synopsis_title"
        app:layout_constraintTop_toBottomOf="@+id/popup_movie_synopsis_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>